--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <section>
         <!-- Nom i logotip -->
-        <h2>Nom: El Meu Nom</h2>
+        <h2>Jan Martos</h2>
         <div class="logo">
             <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
             width="60.000000pt" height="60.000000pt" viewBox="0 0 600.000000 600.000000"
